<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <View
            android:layout_width="50dp"
            android:layout_height="3dp"
            android:background="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"/>
        <ImageView
            android:id="@+id/welcomeNewUserHandImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/welcome_hand"
            android:contentDescription="@string/hello" />
        <TextView
            android:id="@+id/introduceTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textColor="@color/black"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/introduceSubtextTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcomeNewUser"
            android:textAlignment="center"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_collapsed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_top">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textStyle="italic"
            android:gravity="center"
            android:text="@string/swipeUpForChooseAction"
            android:textColor="@color/purple_500"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_expanded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible"
        android:gravity="center"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_top">
        <Button
            android:id="@+id/goodButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="50dp"
            android:text="@string/good"
            android:textColor="@color/white"
            android:textSize="15sp"/>
        <Button
            android:id="@+id/exitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="15sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>